--- a/debian/rules
+++ b/debian/rules
@@ -30,7 +30,8 @@ cmake_options =                                              \
     -DMERCURY_USE_SYSTEM_BOOST:BOOL=ON                       \
     -DMERCURY_USE_XDR:BOOL=OFF                               \
     -DNA_USE_SM:BOOL=ON                                      \
-    -DNA_USE_OFI:BOOL=ON                                     \
+    -DNA_USE_UCX:BOOL=ON                                     \
+    -DNA_USE_DYNAMIC_PLUGINS=ON                              \
     $(NULL)
 
 %:
