Move back to Quilt

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 10),
                libboost-dev,
                libevent-dev,
                libfabric-dev (>= 1.14.0-1),
-               libucx-dev,
+               libjson-c-dev,
                pkg-config
 Standards-Version: 4.1.2
 Section: libs
