--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,9 @@ Build-Depends: debhelper (>= 10),
                cmake,
                libboost-dev,
                libevent-dev,
-               libfabric-dev (>= 1.14.0-1),
-               libucx-dev (= 1.14.0-1),
+               libucx-dev,
+               libfabric-dev (>= 1.20),
+               libjson-c-dev,
                pkg-config
 Standards-Version: 4.1.2
 Section: libs
