--- a/debian/rules
+++ b/debian/rules
@@ -32,7 +32,7 @@ cmake_options =                                              \
     -DNA_USE_SM:BOOL=ON                                      \
     -DNA_USE_DYNAMIC_PLUGINS=ON                              \
     -DNA_USE_OFI:BOOL=ON                                     \
-    -DNA_USE_UCX:BOOL=ON                                     \
+#    -DNA_USE_UCX:BOOL=ON                                     \
     $(NULL)
 
 #    -DNA_USE_UCX:BOOL=ON                                     \
